[gd_scene load_steps=7 format=3 uid="uid://e7ltg6nk5m6o"]

[ext_resource type="Script" uid="uid://c5gg0nb1wu4ps" path="res://pick_up_and_throw/main_char.gd" id="1_jl3no"]
[ext_resource type="Script" uid="uid://cd7ti1xquipne" path="res://collection/group_formation_3D/camera_target.gd" id="2_0his2"]
[ext_resource type="PackedScene" uid="uid://bcbujl2yb7tei" path="res://assets/platform/character/character_duck.gltf" id="3_71a4f"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_qknna"]

[sub_resource type="BoxShape3D" id="BoxShape3D_jl3no"]
size = Vector3(1, 2, 0.706055)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_jl3no"]
height = 0.560547
radius = 1.0

[node name="Character1" type="CharacterBody3D"]
script = ExtResource("1_jl3no")

[node name="CapsuleCollider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_qknna")

[node name="BoxCollider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
shape = SubResource("BoxShape3D_jl3no")
disabled = true

[node name="Camera" type="Node3D" parent="." node_paths=PackedStringArray("camera_target")]
script = ExtResource("2_0his2")
camera_target = NodePath("CameraTarget")

[node name="CameraTarget" type="Node3D" parent="Camera"]

[node name="Camera3D" type="Camera3D" parent="Camera/CameraTarget"]
transform = Transform3D(-1, -5.01436e-08, 7.16125e-08, 0, 0.819152, 0.573576, -8.74228e-08, 0.573576, -0.819152, 0, 16.475, -20.715)
fov = 20.0

[node name="rotationNode" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="character_duck2" parent="rotationNode" instance=ExtResource("3_71a4f")]

[node name="ObjectPositionMarker" type="Marker3D" parent="rotationNode"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0.7)

[node name="InteractionArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.304246, 0)
shape = SubResource("CylinderShape3D_jl3no")

[connection signal="body_entered" from="InteractionArea" to="." method="_on_interaction_area_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_interaction_area_body_exited"]
